Assistant checkpoint: Fix z-index for blog card pseudo-elements
Assistant generated file changes:
- app/insights/blog-cards.css: Fix z-index layering for blog card icon circle pseudo-elements

---

User prompt:

see the blue button which has after and before in card blogs insight - z -index should be behiend

--- a/app/insights/blog-cards.css
+++ b/app/insights/blog-cards.css
@@ -97,7 +97,7 @@
 
 .custom-blog-card .hori .icon-circle::after {
   content: '';
-  z-index: 1;
+  z-index: -1;
   position: absolute;
   top: -30px;
   left: 25px;
@@ -110,7 +110,7 @@
 
 .custom-blog-card .hori .icon-circle::before {
   content: '';
-  z-index: 1;
+  z-index: -1;
   position: absolute;
   top: 11px;
   left: -11px;
